Bug 58982 - Splashscreen not centered using dual monitors
Summary: Splashscreen not centered using dual monitors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.6.2.2 release
Hardware: Other Linux (All)
: low minor
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-03 13:27 UTC by Bram.hautekiet
Modified: 2013-10-17 18:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot when using 2 monitors (2.58 MB, image/png)
2013-01-03 13:33 UTC, Bram.hautekiet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bram.hautekiet 2013-01-03 13:27:14 UTC
Problem description: 
When using dual monitors, the splash screen is vertically centered using the height of the biggest screen.

Steps to reproduce:
1. Use 2 screens.
2. Start up an application on the smallest screen.

              
Operating System: Ubuntu
Version: 3.6.2.2 release
Comment 1 Bram.hautekiet 2013-01-03 13:33:07 UTC
Created attachment 72450 [details]
Screenshot when using 2 monitors
Comment 2 tommy27 2013-10-03 09:15:57 UTC
do you still see this in 4.0.5 or 4.1.1 releases?

lowering importance since it seems a minor annoyance
Comment 3 Samuel Mehrbrodt 2013-10-03 09:53:40 UTC
I can confirm this in recent Master (4.2).
Comment 4 Samuel Mehrbrodt 2013-10-04 06:57:24 UTC
Submitted a patch: https://gerrit.libreoffice.org/6119
Comment 5 Commit Notification 2013-10-17 18:58:15 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5d4558da5f4b5ee61589fd2b9acaf4eff9b515f5

fdo#58982 Center the splash screen in dual-monitor setup



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.