fdo#58982 Center the splash screen in dual-monitor setup

The problem was that the position of the screen was not considered.

Change-Id: I1b2feb916952a4175bfff0675a884477407a702c
Reviewed-on: https://gerrit.libreoffice.org/6119
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>